--- a/branch1file.html
+++ b/branch1file.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    hi this is the new file in master
+    hey this the file in branch1
 </body>
 </html>
