added new file in branch2

--- a/branch2file.html
+++ b/branch2file.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    hey this the file in branch1
+    hey this is the first file in branch2
 </body>
 </html>
